# Phi-Database

./: .bazelrc  BUILD  Buffer.cpp  CMakeLists.txt  Documentation.md  File.cpp  File.hpp  Journal.md  MODULE.bazel  README.md  REPORT.md  StorageInterface.cpp  WORKSPACE  bazel-Phi-Database  bazel-bin  bazel-out  bazel-testlogs  main  main.cpp
Docs/: Documentation.md
Docs/compiler/: Parser.md
Docs/storage-manager/: Table.md
database-files/heapfiles/: DUMMY_TABLE.db  USERS.db
examples/: CMakeLists.txt  compiler-examples.cpp  compiler.cpp
examples/compiler/: CMakeLists.txt  lexer.cpp  parser.cpp
examples/query-executor/: CMakeLists.txt  executor_demo.cpp
examples/storage-manager/: CMakeLists.txt  bplustree_demo.cpp  generate_dummy_data.cpp  heapfile.cpp  storageops.cpp  table.cpp
include/: Buffer.hpp  Database.hpp  DbFile.hpp  Join.hpp  Logger.hpp  Page.hpp  PageCache.hpp  QueryOps.hpp  StorageInterface.hpp  Structs.hpp  TLogger.hpp  TScheduler.hpp  Table.hpp  TableOps.hpp  Types.hpp  WAL.hpp
include/compiler/: QueryProcessor.hpp
include/general/: AST.hpp  Comparison.hpp  Page.hpp  Structs.hpp  Types.hpp
include/page-manager/: DbFile.hpp  PageCache.hpp  Replacer.hpp
include/query-executor/: QueryExecutor.hpp
include/scheduling/: ScheduleStructs.hpp  TLogger.hpp  TScheduler.hpp
include/sql-compiler/: Compiler.hpp  Lexer.hpp  OptimizerCache.hpp  Parser.hpp  SqlAST.hpp  Types.hpp
include/storage-manager/: BPlusTree.hpp  Database.hpp  HeapFile.hpp  StorageOps.hpp  StorageStructs.hpp  Table.hpp
include/storage-manager/ops/: Selection.hpp  StorageOps.hpp
include/table/: Table.hpp
src/: BUILD  CMakeLists.txt  Database.cpp  DbFile.cpp  Page.hpp  PageCache.cpp  TLogger.cpp  TScheduler.cpp  Table.cpp  Types.hpp  main  main.cpp
src/Database/: Database.cpp  Database.hpp
src/DbFile/: BUILD  CMakeLists.txt  DbFile.cpp  DbFile.hpp
src/Logger/: Logger.hpp
src/PageCache/: BUILD  PageCache.cpp  PageCache.hpp
src/Table/: BUILD  Table.cpp  Table.hpp  TableOps.hpp
src/WriteAheadLog/: WAL.hpp
src/compiler/: QueryProcessor.cpp
src/page-manager/: DbFile.cpp  PageCache.cpp
src/query-executor/: QueryExecutor.cpp
src/sql-compiler/: Lexer.cpp  Parser.cpp  QueryProcessor.cpp  Tokenizer.cpp
src/storage-manager/: BPlusTree.cpp  Database.cpp  HeapFile.cpp  Table.cpp
src/storage-manager/ops/: Selection.cpp  StorageOps.cpp
src/transaction-processor/: Service_Summary.md  TLogger.cpp
tests/: BUILD  CMakeLists.txt  QueryProcessorTest.cpp
tests/dbfile/: BUILD  CMakeLists.txt  test_dbfile.cpp
tests/memory_manager/: test_pagecache.cpp
tests/pagecache/: BUILD
tests/table/: BUILD
